--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 </ol><p>It's firmware and design will be free and open source. Also Wi-Fi version (with the same form factor) and support for additional sensors (dust, motion, light, Co2..etc) will be implemented in near future.</p>
 
 <p><img src="https://lh3.googleusercontent.com/-27lLNB3IDv0/UJOncSsGcQI/AAAAAAABMKI/ofErJhj9w0o/s512/IMG-20121102-00209.jpg" alt="ZSA1-E"></p>
+
+<p><img src="https://lh4.googleusercontent.com/-S5GX2HO_vJ8/UJOnc_rJ0XI/AAAAAAABMKM/rm7oedOM9FI/s512/IMG-20121102-00210.jpg" alt="ZSA1-E"></p>
         </section>
 
         <aside id="sidebar">
