Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <li>Cheap</li>
 <li>Can be easy assembled (minimal soldering and enclosure modification)</li>
 <li>Web based network setting setup (save network settings in EEPROM) </li>
-</ol><p>It's firmware and design will be free and open source. Also Wi-Fi version (with the same form factor) and support for additional sensors (dust, light, Co2..etc) will be implemented in near future.</p>
+</ol><p>It's firmware and design will be free and open source (<a href="http://gplv3.fsf.org/">GPL v3</a>). Also Wi-Fi version (with the same form factor) and support for additional sensors (dust, light, Co2..etc) will be implemented in near future.</p>
 
 <p><img src="https://lh6.googleusercontent.com/-glmCXJygepE/ULoR4KFLvcI/AAAAAAABOCo/zvZGLSvnQjI/s720/DSCN5204.JPG" alt="ZSA1-E"></p>
 
